[tool.poetry]
name = "silly-ssh-server"
version = "0.0.1"
description = "A small silly ssh server"
authors = ["Firepup Sixfifty <firepyp650@gmail.com>"]
readme = "README.md"
packages = [{include = "silly_ssh_server"}]

[tool.poetry.dependencies]
python = "^3.11"
twisted = "^24.3.0"
cryptography = "^42.0.7"
bcrypt = "^4.1.3"
firepup650 = "^1.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
